[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/zombiefiles/png/female/Walk (5).png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/zombiefiles/png/female/Walk (4).png" type="Texture" id=3]
[ext_resource path="res://assets/zombiefiles/png/female/Walk (2).png" type="Texture" id=4]
[ext_resource path="res://assets/zombiefiles/png/female/Walk (3).png" type="Texture" id=5]
[ext_resource path="res://assets/zombiefiles/png/female/Walk (6).png" type="Texture" id=6]
[ext_resource path="res://assets/zombiefiles/png/female/Walk (7).png" type="Texture" id=7]
[ext_resource path="res://assets/zombiefiles/png/female/Walk (8).png" type="Texture" id=8]
[ext_resource path="res://assets/zombiefiles/png/female/Walk (10).png" type="Texture" id=9]
[ext_resource path="res://assets/zombiefiles/png/female/Walk (9).png" type="Texture" id=10]
[ext_resource path="res://assets/zombiefiles/png/female/Walk (1).png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 9 ) ],
"loop": true,
"name": "walk",
"speed": 9.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14, 31 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 6 )

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 35, 6 )
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )
speed = Vector2( 150, 1000 )

[node name="IdleEnemy" type="Sprite" parent="."]
position = Vector2( 255, 356 )
scale = Vector2( 0.180851, 0.180851 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="IdleEnemy"]
frames = SubResource( 1 )
animation = "walk"
frame = 2
speed_scale = 2.0
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 258, 371 )
shape = SubResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 249.5, 259 )
scale = Vector2( 21.35, 14.4 )
process_parent = true
physics_process_parent = true

[node name="JumpDetector" type="Area2D" parent="."]
modulate = Color( 0.243137, 1, 0, 1 )
gravity_point = true
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpDetector"]
position = Vector2( 258, 328 )
shape = SubResource( 3 )
[connection signal="body_entered" from="JumpDetector" to="." method="_on_JumpDetector_body_entered"]
